refactoring api driver manager paper channel
